Feat: Complete Missile System implementation with permanent upgrade, homing logic, AOE damage, and ammo management

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 </div>
                 <span id="hud-shield-text" class="stat-value">0</span>
             </div>
+            <div id="hud-missiles" class="stat-container"
+                style="display: none; color: #00ffff; font-weight: bold; margin-top: 5px;">
+                <span data-label="MISSILES">Missiles</span>: <span id="hud-missile-count">0</span>
+            </div>
         </div>
         <div id="hud-top-right" class="hud-element">
             <span data-label="WAVE">Vague</span>: <span id="hud-wave">1</span><br>
