feat: implement Surcharge (Heat) system with risk-reward mechanics and HUD updates

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
                 </div>
                 <span id="hud-shield-text" class="stat-value">0</span>
             </div>
+            <div class="stat-container">
+                <span data-label="HEAT">Surcharge</span>
+                <div class="progress-bar">
+                    <div id="heat-bar" class="progress-fill heat-fill"></div>
+                </div>
+                <span id="hud-heat-status" class="stat-value" style="font-size: 10px; width: 80px;">REFROIDI</span>
+            </div>
             <div id="hud-missiles" class="stat-container"
                 style="display: none; color: #00ffff; font-weight: bold; margin-top: 5px;">
                 <span data-label="MISSILES">Missiles</span>: <span id="hud-missile-count">0</span>
