feat: replace shield system with energy system and refine HUD

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <span id="hud-hp-text" class="stat-value">100/100</span>
             </div>
             <div class="stat-container">
-                <span data-label="SHIELD">Bouclier</span>
+                <span data-label="ENERGY">Énergie</span>
                 <div class="progress-bar">
-                    <div id="shield-bar" class="progress-fill shield-fill"></div>
+                    <div id="energy-bar" class="progress-fill energy-fill"></div>
                 </div>
-                <span id="hud-shield-text" class="stat-value">0</span>
+                <span id="hud-energy-status" class="stat-value" style="font-size: 10px; width: 80px;">PRÊT</span>
             </div>
             <div class="stat-container">
                 <span data-label="HEAT">Surcharge</span>
